refactor all checkboxes to left-hand side for readability and consistency

--- a/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
@@ -27,19 +27,31 @@
           
           <div class="form-group">
             <b>Technologies Used: </b><br />
-            <span>| Photoshop: </span><input type="checkbox" name="usesPhotoshop" value="true">
-            <span>| Vscode: </span><input type="checkbox" name="usesVscode" value="true">
-            <span>| Mysqlworkbench:<input type="checkbox" name="usesMysql" value="true">
-            <span>| Javascript:<input type="checkbox" name="usesJavascript" value="true">    
-            <span>| CSS:<input type="checkbox" name="usesCss" value="true">    
-            <span>| Bootstrap:<input type="checkbox" name="usesBootstrap" value="true">
-            <span>| C#:<input type="checkbox" name="usesCsharp" value="true">
-            <span>| Swagger:<input type="checkbox" name="usesSwagger" value="true">
-            <span>| Asp.Net MVC:<input type="checkbox" name="usesAspDotnetMvc" value="true">
-            <span>| HTML:<input type="checkbox" name="usesHtml" value="true">
-            <span>| NodeJs:<input type="checkbox" name="usesNodeJs" value="true">
-            <span>| Webpack:<input type="checkbox" name="usesWebpack" value="true">
-            <span>| Jquery:<input type="checkbox" name="usesJquery" value="true">
+            <span><input type="checkbox" name="usesPhotoshop" value="true"> : Photoshop</span>
+            <br>
+            <span><input type="checkbox" name="usesVscode" value="true"> : Vscode</span>
+            <br>
+            <span><input type="checkbox" name="usesMysql" value="true"> : Mysqlworkbench</span>
+            <br>
+            <span><input type="checkbox" name="usesJavascript" value="true"> : Javascript</span>
+            <br>
+            <span><input type="checkbox" name="usesCss" value="true"> : CSS</span>
+            <br>
+            <span><input type="checkbox" name="usesBootstrap" value="true"> : Bootstrap</span>
+            <br>
+            <span><input type="checkbox" name="usesCsharp" value="true"> : C#</span>
+            <br>
+            <span><input type="checkbox" name="usesSwagger" value="true"> : Swagger</span>
+            <br>
+            <span><input type="checkbox" name="usesAspDotnetMvc" value="true"> : Asp.Net MVC</span>
+            <br>
+            <span><input type="checkbox" name="usesHtml" value="true"> : HTML</span>
+            <br>
+            <span><input type="checkbox" name="usesNodeJs" value="true"> : NodeJs</span>
+            <br>
+            <span><input type="checkbox" name="usesWebpack" value="true"> : Webpack</span>
+            <br>
+            <span><input type="checkbox" name="usesJquery" value="true"> : Jquery</span>
           </div>
         </div>
 
@@ -73,13 +85,13 @@
         <div class="col-md-6">
           <div class="form-group">
           <b>Requirements: </b><br />
-            <span>Postman: </span><input type="checkbox" name="requiresPostman" value="true">
+            <span><input type="checkbox" name="requiresPostman" value="true"> : Postman</span>
             <br>
-            <span>Vscode: </span><input type="checkbox" name="requiresVscode" value="true">
+            <span><input type="checkbox" name="requiresVscode" value="true"> : Vscode</span>
             <br>
-            <span>MySQL Workbench: <input type="checkbox" name="requiresMysql" value="true">
+            <span><input type="checkbox" name="requiresMysql" value="true"> : MySQL Workbench</span>
             <br>
-            <span>.NET Core: <input type="checkbox" name="requiresDotnetCore" value="true">
+            <span><input type="checkbox" name="requiresDotnetCore" value="true"> : .NET Core</span>
             <br>
         </div>   
 
@@ -87,13 +99,19 @@
         <div class="col-md-6">
           <div class="form-group">
             <b>Optional Setup Sections: </b><br />
-            <span><input type="checkbox" name="hasProtectingDataNav" value="true"> Git ignore file handling?</span>
-            <span><input type="checkbox" name="hasBugStatusNav" value="true"> Bug Status?</span>
-            <span><input type="checkbox" name="hasCloningDataNav" value="true"> Cloning?</span>
-            <span><input type="checkbox" name="hasAppSettings" value="true"> User/PW in appsettings.json?</span>
-            <span><input type="checkbox" name="hasDatabaseMigrations" value="true"> Database creation with Migrations?</span>
-            <span><input type="checkbox" name="hasApiCrudSection" value="true"> Postman API CRUD Requests?</span>
-            <span><input type="checkbox" name="hasSpecificationsDataNav" value="true"> Add specifications section?</span>
+            <span><input type="checkbox" name="hasProtectingDataNav" value="true"> : Git ignore file handling?</span>
+            <br>
+            <span><input type="checkbox" name="hasBugStatusNav" value="true"> : Bug Status?</span>
+            <br>
+            <span><input type="checkbox" name="hasCloningDataNav" value="true"> : Cloning?</span>
+            <br>
+            <span><input type="checkbox" name="hasAppSettings" value="true"> : appsettings.json?</span>
+            <br>
+            <span><input type="checkbox" name="hasDatabaseMigrations" value="true"> : Database creation with Migrations?</span>
+            <br>
+            <span><input type="checkbox" name="hasApiCrudSection" value="true"> : Postman API CRUD Requests?</span>
+            <br>
+            <span><input type="checkbox" name="hasSpecificationsDataNav" value="true"> : Add specifications section?</span>
           </div>
           <div class="form-group">
             <label for="bugStatus">bug status</label>
@@ -106,86 +124,94 @@
 
 
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="form-group">
             <b>Contributors: </b><br />
-            <span>| Allison Sadin: <input type="checkbox" name="hasAllisonSadin" value="true">
+            <span><input type="checkbox" name="hasAllisonSadin" value="true"> : Allison Sadin
             <br>
-            <span>| Ben White: <input type="checkbox" name="hasBenWhite" value="true">
+            <span><input type="checkbox" name="hasBenWhite" value="true"> : Ben White
             <br>
-            <span>| Ben Russell: <input type="checkbox" name="hasBenRussell" value="true">
+            <span><input type="checkbox" name="hasBenRussell" value="true"> : Ben Russell
             <br>
-            <span>| Beverly Potts: <input type="checkbox" name="hasBeverlyPotts" value="true">
+            <span><input type="checkbox" name="hasBeverlyPotts" value="true"> : Beverly Potts
             <br>
-            <span>| Brittany Lindgren: <input type="checkbox" name="hasBrittanyLindgren" value="true">
+            <span><input type="checkbox" name="hasBrittanyLindgren" value="true"> : Brittany Lindgren
             <br>
-            <span>| Christine Augustine: <input type="checkbox" name="hasChristineAugustine" value="true">
+            <span><input type="checkbox" name="hasChristineAugustine" value="true"> : Christine Augustine
             <br>
-            <span>| Chris Yoon: <input type="checkbox" name="hasChrisYoon" value="true">
+            <span><input type="checkbox" name="hasChrisYoon" value="true"> : Chris Yoon
             <br>
-            <span>| Cody Fritz: <input type="checkbox" name="hasCodyFritz" value="true">
+            <span><input type="checkbox" name="hasCodyFritz" value="true"> : Cody Fritz 
             <br>
-            <span>| Deryck Jackson: <input type="checkbox" name="hasDeryckJackson" value="true">
+            <span><input type="checkbox" name="hasDeryckJackson" value="true"> : Deryck Jackson
             <br>
-            <span>| Erich Richter: <input type="checkbox" name="hasErichRichter" value="true">
+            <span><input type="checkbox" name="hasErichRichter" value="true"> : Erich Richter
             <br>
-            <span>| Evgeniya Chernaya: <input type="checkbox" name="hasEvgeniyaChernaya" value="true">
+            <span><input type="checkbox" name="hasEvgeniyaChernaya" value="true"> : Evgeniya Chernaya
             <br>
-            <span>| Frederick Ernest: <input type="checkbox" name="hasFrederickErnest" value="true">
+            <span><input type="checkbox" name="hasFrederickErnest" value="true"> : Frederick Ernest 
             <br>
-            <span>| Hannah Beinstein: <input type="checkbox" name="hasHannahBeinstein" value="true">
-            <br>
-            <span>| Ian Gregg: <input type="checkbox" name="hasIanGregg" value="true">
-            <br>
-            <span>| Ian Scott: <input type="checkbox" name="hasIanScott" value="true">
-            <br>
-            <span>| James Henager: <input type="checkbox" name="hasJamesHenager" value="true">
-            <br>
-            <span>| Jason Khan: <input type="checkbox" name="hasJasonKhan" value="true">
-            <br>
-            <span>| Jeffrey Kim: <input type="checkbox" name="hasJeffreyKim" value="true">
-            <br>
+
           </div>
         </div>
-            <div class="col-md-6">
+          <div class="col-md-4">
             <div class="form-group">
-            <span>| JohnNils Olson: <input type="checkbox" name="hasJohnNilsOlson" value="true">
+              <br>
+            <span><input type="checkbox" name="hasHannahBeinstein" value="true"> : Hannah Beinstein
             <br>
-            <span>| Joseph Pearce: <input type="checkbox" name="hasJosephPearce" value="true">
+            <span><input type="checkbox" name="hasIanGregg" value="true"> : Ian Gregg
             <br>
-            <span>| Kate Skorija: <input type="checkbox" name="hasKateSkorija" value="true">
+            <span><input type="checkbox" name="hasIanScott" value="true"> : Ian Scott
             <br>
-            <span>| Kevin Davis: <input type="checkbox" name="hasKevinDavis" value="true">
+            <span><input type="checkbox" name="hasJamesHenager" value="true"> : James Henager
             <br>
-            <span>| Kyle Hubbard: <input type="checkbox" name="hasKyleHubbard" value="true">
+            <span><input type="checkbox" name="hasJasonKhan" value="true"> : Jason Khan
             <br>
-            <span>| Mariel Hamson: <input type="checkbox" name="hasMarielHamson" value="true">
+            <span><input type="checkbox" name="hasJeffreyKim" value="true"> : Jeffrey Kim
             <br>
-            <span>| Megan Hepner: <input type="checkbox" name="hasMeganHepner" value="true">
+            <span><input type="checkbox" name="hasJohnNilsOlson" value="true"> : JohnNils Olson
             <br>
-            <span>| Micheal Hansen: <input type="checkbox" name="hasMichealHansen" value="true">
+            <span><input type="checkbox" name="hasJosephPearce" value="true"> : Joseph Pearce
             <br>
-            <span>| Noel Kirkland: <input type="checkbox" name="hasNoelKirkland" value="true">
+            <span><input type="checkbox" name="hasKateSkorija" value="true"> : Kate Skorija
             <br>
-            <span>| Peter Grimm: <input type="checkbox" name="hasPeterGrimm" value="true">
+            <span><input type="checkbox" name="hasKevinDavis" value="true"> : Kevin Davis
             <br>
-            <span>| Sara Kane: <input type="checkbox" name="hasSaraKane" value="true">
+            <span><input type="checkbox" name="hasKyleHubbard" value="true"> : Kyle Hubbard
             <br>
-            <span>| Sean Downs: <input type="checkbox" name="hasSeanDowns" value="true">
+            <span><input type="checkbox" name="hasMarielHamson" value="true"> : Mariel Hamson
             <br>
-            <span>| Spencer Moody: <input type="checkbox" name="hasSpencerMoody" value="true">
+            
+          </div>
+        </div>
+                  <div class="col-md-4">
+            <div class="form-group">
+              <br>
+            <span><input type="checkbox" name="hasMeganHepner" value="true"> : Megan Hepner
             <br>
-            <span>| Taylor Phillips: <input type="checkbox" name="hasTaylorPhillips" value="true">
+            <span><input type="checkbox" name="hasMichealHansen" value="true"> : Micheal Hansen
             <br>
-            <span>| Taylor Somers: <input type="checkbox" name="hasTaylorSomers" value="true">
+            <span><input type="checkbox" name="hasNoelKirkland" value="true"> : Noel Kirkland
             <br>
-            <span>| Teresa Rosinksi: <input type="checkbox" name="hasTeresaRosinksi" value="true">
+            <span><input type="checkbox" name="hasPeterGrimm" value="true"> : Peter Grimm
             <br>
-            <span>| Thomas Glenn: <input type="checkbox" name="hasThomasGlenn" value="true">
+            <span><input type="checkbox" name="hasSaraKane" value="true"> : Sara Kane
             <br>
-            <span>| Tristan Emmerson: <input type="checkbox" name="hasTristanEmmerson" value="true">
+            <span><input type="checkbox" name="hasSeanDowns" value="true"> : Sean Downs
             <br>
-            <span>| Tyson Lackey: <input type="checkbox" name="hasTysonLackey" value="true">    
+            <span><input type="checkbox" name="hasSpencerMoody" value="true"> : Spencer Moody
+            <br>
+            <span><input type="checkbox" name="hasTaylorPhillips" value="true"> : Taylor Phillips
+            <br>
+            <span><input type="checkbox" name="hasTaylorSomers" value="true"> : Taylor Somers
+            <br>
+            <span><input type="checkbox" name="hasTeresaRosinksi" value="true"> : Teresa Rosinksi
+            <br>
+            <span><input type="checkbox" name="hasThomasGlenn" value="true"> : Thomas Glenn
+            <br>
+            <span><input type="checkbox" name="hasTristanEmmerson" value="true"> : Tristan Emmerson
+            <br>
+            <span><input type="checkbox" name="hasTysonLackey" value="true"> : Tyson Lackey   
           </div>
         </div>
       </div>
