--- a/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
@@ -57,27 +57,28 @@
 
         <div class="col-md-6">
           <div class="form-group">
-            <label for="keyword1">keyword 1</label>
+            <h1>Topics (replace spaces with hyphens)</h1>
+            <label for="keyword1">keyword-1</label>
             <input class="form-control" id="keyword1" name="keyword1" type="text">
           </div>
           <div class="form-group">
-            <label for="keyword2">keyword 2</label>
+            <label for="keyword2">keyword-2</label>
             <input class="form-control" id="keyword2" name="keyword2" type="text">
           </div>
           <div class="form-group">
-            <label for="keyword3">keyword 3</label>
+            <label for="keyword3">keyword-3</label>
             <input class="form-control" id="keyword3" name="keyword3" type="text">
           </div>
             <div class="form-group">
-            <label for="keyword4">keyword 4</label>
+            <label for="keyword4">keyword-4</label>
             <input class="form-control" id="keyword4" name="keyword4" type="text">
           </div>
           <div class="form-group">
-            <label for="keyword5">keyword 5</label>
+            <label for="keyword5">keyword-5</label>
             <input class="form-control" id="keyword5" name="keyword5" type="text">
           </div>
           <div class="form-group">
-            <label for="keyword6">keyword 6</label>
+            <label for="keyword6">keyword-6</label>
             <input class="form-control" id="keyword6" name="keyword6" type="text">
           </div>
         </div>
@@ -101,17 +102,19 @@
             <b>Optional Setup Sections: </b><br />
             <span><input type="checkbox" name="hasProtectingDataNav" value="true"> : Git ignore file handling?</span>
             <br>
-            <span><input type="checkbox" name="hasBugStatusNav" value="true"> : Bug Status?</span>
+            <span><input type="checkbox" name="hasBugStatusNav" value="true"> : Add Bug Status?</span>
             <br>
-            <span><input type="checkbox" name="hasCloningDataNav" value="true"> : Cloning?</span>
+            <span><input type="checkbox" name="hasCloningDataNav" value="true"> : Add Cloning?</span>
             <br>
-            <span><input type="checkbox" name="hasAppSettings" value="true"> : appsettings.json?</span>
+            <span><input type="checkbox" name="hasAppSettings" value="true"> : Add AppSettings.json section?</span>
             <br>
-            <span><input type="checkbox" name="hasDatabaseMigrations" value="true"> : Database creation with Migrations?</span>
+            <span><input type="checkbox" name="hasDatabaseMigrations" value="true"> : Database with Migrations?</span>
             <br>
             <span><input type="checkbox" name="hasApiCrudSection" value="true"> : Postman API CRUD Requests?</span>
             <br>
-            <span><input type="checkbox" name="hasSpecificationsDataNav" value="true"> : Add specifications section?</span>
+            <span><input type="checkbox" name="hasSpecificationsDataNav" value="true"> : Add Specifications section?</span>
+            <br>
+            <span><input type="checkbox" name="hasPaginationSection" value="true"> : Add Pagination section?</span>
           </div>
           <div class="form-group">
             <label for="bugStatus">bug status</label>
