--- a/MakeMeTakeMeReadMe/Views/Shared/_Layout.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/styles.css">
     <link rel="icon" type="image/png" href="https://coding-assets.s3-us-west-2.amazonaws.com/favicons/MakeMeTakeMeReadMe.Solution.png">
   </head>
