--- a/MakeMeTakeMeReadMe/wwwroot/css/styles.css
+++ b/MakeMeTakeMeReadMe/wwwroot/css/styles.css
@@ -37,6 +37,8 @@ p {
 
 label {
   color: rgb(255, 255, 255);
+  font-family: 'Orbitron', sans-serif;
+  font-size: 25px;
 }
 
 .space {
@@ -79,4 +81,17 @@ div#footer {
 .jumbotron {
   text-align: center;
   background-color: rgba(193, 115, 127, 0.85);
+}
+
+.border {
+  border: 1px dotted black;
+  margin: 15px;
+}
+
+.form-control {
+  max-width: 500px;
+}
+
+.center {
+/*   text-align: center; */
 }
